# manipulation

./: .fossa.yml  .travis.yml  README.md  manipulation.rosinstall
go_to_location/: CMakeLists.txt  README.md  package.xml
go_to_location/scripts/: display_ik.py  go_to_location_ui.py  list_ik_locations.py  random_go_to.py
go_to_location/src/: go_to_location_client_node.cpp  go_to_location_server_node.cpp
inbound_pick/: CMakeLists.txt  README.md  package.xml
inbound_pick/src/: inbound_pick_client_node.cpp  inbound_pick_loader_node.cpp  inbound_pick_server_node.cpp
manipulation_msgs/: CMakeLists.txt  README.md  package.xml
manipulation_msgs/action/: GoTo.action  PickObjects.action  PlaceObjects.action
manipulation_msgs/msg/: Box.msg  Configuration.msg  Location.msg  SlotsGroup.msg
manipulation_msgs/srv/: AddBoxes.srv  AddObjects.srv  AddSlots.srv  AddSlotsGroup.srv  GetLocationIkSolution.srv  JobExecution.srv  ListOfJobExecuters.srv  ListOfLocations.srv  ListOfSlots.srv  PlanToTF.srv  RegisterJobExecuter.srv  RemoveSlots.srv  RemoveSlotsGroup.srv  ResetSlots.srv
manipulation_utils/: CMakeLists.txt  README.md  package.xml
manipulation_utils/include/manipulation_utils/: go_to_location.h  location.h  manipulation_load_params_utils.h  manipulation_utils.h  pick_objects.h  place_objects.h  skill_base.h
manipulation_utils/src/: go_to_location.cpp  location.cpp  manipulation_load_params_utils.cpp  manipulation_utils.cpp  pick_objects.cpp  place_objects.cpp  skill_base.cpp
manipulation_utils/test/: test.cpp  test.launch
outbound_place/: CMakeLists.txt  README.md  package.xml
outbound_place/src/: outbound_place_client_node.cpp  outbound_place_loader_node.cpp  outbound_place_server_node.cpp
