<?xml version="1.0"?>
<package format="2">
  <name>manipulation_utils</name>
  <version>0.0.0</version>
  <description>The manipulation_utils package</description>

  <maintainer email="jacobi@todo.todo">jacobi</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>manipulation_msgs</build_depend>
  <build_depend>configuration_msgs</build_depend>
  <build_depend>moveit_planning_helper</build_depend>
  <build_depend>object_loader_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosdyn_core</build_depend>
  <build_depend>rosparam_utilities</build_depend>
  <!--build_depend>collision_detection_gpuvoxel</build_depend-->
  <build_depend>std_srvs</build_depend>
  <build_export_depend>manipulation_msgs</build_export_depend>
  <build_export_depend>configuration_msgs</build_export_depend>
  <build_export_depend>moveit_planning_helper</build_export_depend>
  <build_export_depend>object_loader_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosdyn_core</build_export_depend>
  <build_export_depend>rosparam_utilities</build_export_depend>
  <!--build_export_depend>collision_detection_gpuvoxel</build_export_depend-->
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>manipulation_msgs</exec_depend>
  <exec_depend>configuration_msgs</exec_depend>
  <exec_depend>moveit_planning_helper</exec_depend>
  <exec_depend>object_loader_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosdyn_core</exec_depend>
  <exec_depend>rosparam_utilities</exec_depend>
  <!--exec_depend>collision_detection_gpuvoxel</exec_depend-->
  <exec_depend>std_srvs</exec_depend>

  <export>
  </export>
</package>
